syntax = "proto3";

option csharp_namespace = "DbData.Protos";
package ddata;
import "google/protobuf/wrappers.proto";

message EmptyRequest {
    
}
message IdRequest {
    string id = 1;
}
message KeyValuePair{
	string key = 1;
	string value =2;
}

message ResponseMessage {
	int32 status = 1;
	string statusCode = 2;
	string message = 3;
	string data = 4;
}

message PagingType {
	int32 start = 1;
	int32 length = 2;
}
